{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 43,
  "lineage": "ba41305e-69e9-0632-36bd-1ff253e0e36d",
  "resources": [
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793934355667:security-group/sg-0065d7b4c1f0f92e0",
            "description": "Security group for DMS replication instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0065d7b4c1f0f92e0",
            "ingress": [],
            "name": "dms-replication-sg",
            "name_prefix": "",
            "owner_id": "793934355667",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dms-replication-sg"
            },
            "tags_all": {
              "Name": "dms-replication-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cefd5ac57397678"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793934355667:security-group/sg-078270149b6cad868",
            "description": "Security group for on-prem MySQL EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078270149b6cad868",
            "ingress": [
              {
                "cidr_blocks": [
                  "106.66.38.88/32"
                ],
                "description": "SSH from admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "MySQL from DMS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0065d7b4c1f0f92e0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "onprem-mysql-sg",
            "name_prefix": "",
            "owner_id": "793934355667",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "onprem-mysql-sg"
            },
            "tags_all": {
              "Name": "onprem-mysql-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cefd5ac57397678"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.http.my_ip",
            "module.sg.aws_security_group.dms",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793934355667:security-group/sg-04a12be04ba190a86",
            "description": "Security group for RDS target database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a12be04ba190a86",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from DMS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0065d7b4c1f0f92e0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-target-sg",
            "name_prefix": "",
            "owner_id": "793934355667",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-target-sg"
            },
            "tags_all": {
              "Name": "rds-target-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cefd5ac57397678"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg.aws_security_group.dms",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7613ec99c247140",
            "arn": "arn:aws:ec2:us-east-1:793934355667:elastic-ip/eipalloc-0e7613ec99c247140",
            "domain": "vpc",
            "id": "eipalloc-0e7613ec99c247140",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-194-74-161.compute-1.amazonaws.com",
            "public_ip": "34.194.74.161",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "migration-vpc-nat-eip"
            },
            "tags_all": {
              "Name": "migration-vpc-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793934355667:internet-gateway/igw-0907b847e4e38bd5d",
            "id": "igw-0907b847e4e38bd5d",
            "owner_id": "793934355667",
            "tags": {
              "Name": "migration-vpc-igw"
            },
            "tags_all": {
              "Name": "migration-vpc-igw"
            },
            "vpc_id": "vpc-00cefd5ac57397678"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7613ec99c247140",
            "association_id": "eipassoc-09a3c324205430a0a",
            "connectivity_type": "public",
            "id": "nat-058ddd7e3e15951f3",
            "network_interface_id": "eni-0bb50901246c14c22",
            "private_ip": "10.0.15.84",
            "public_ip": "34.194.74.161",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04dd09c0c3e71f483",
            "tags": {
              "Name": "migration-vpc-nat"
            },
            "tags_all": {
              "Name": "migration-vpc-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793934355667:route-table/rtb-024d07ced56ad6389",
            "id": "rtb-024d07ced56ad6389",
            "owner_id": "793934355667",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-058ddd7e3e15951f3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "migration-vpc-private-rt"
            },
            "tags_all": {
              "Name": "migration-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cefd5ac57397678"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793934355667:route-table/rtb-0960cec537fdef001",
            "id": "rtb-0960cec537fdef001",
            "owner_id": "793934355667",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0907b847e4e38bd5d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "migration-vpc-public-rt"
            },
            "tags_all": {
              "Name": "migration-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cefd5ac57397678"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d8849a57b60c712",
            "route_table_id": "rtb-024d07ced56ad6389",
            "subnet_id": "subnet-082101a5d34571458"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e7ec2ec19d9bf2d",
            "route_table_id": "rtb-024d07ced56ad6389",
            "subnet_id": "subnet-08e340e64f18e0a64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec43591917bd21b8",
            "route_table_id": "rtb-0960cec537fdef001",
            "subnet_id": "subnet-04dd09c0c3e71f483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ced27a663cfef714",
            "route_table_id": "rtb-0960cec537fdef001",
            "subnet_id": "subnet-09e0c9c421f989f4c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793934355667:subnet/subnet-082101a5d34571458",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082101a5d34571458",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793934355667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "migration-vpc-private-1"
            },
            "tags_all": {
              "Name": "migration-vpc-private-1"
            },
            "vpc_id": "vpc-00cefd5ac57397678"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793934355667:subnet/subnet-08e340e64f18e0a64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e340e64f18e0a64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793934355667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "migration-vpc-private-2"
            },
            "tags_all": {
              "Name": "migration-vpc-private-2"
            },
            "vpc_id": "vpc-00cefd5ac57397678"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793934355667:subnet/subnet-04dd09c0c3e71f483",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dd09c0c3e71f483",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "793934355667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "migration-vpc-public-1"
            },
            "tags_all": {
              "Name": "migration-vpc-public-1"
            },
            "vpc_id": "vpc-00cefd5ac57397678"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793934355667:subnet/subnet-09e0c9c421f989f4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e0c9c421f989f4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "793934355667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "migration-vpc-public-2"
            },
            "tags_all": {
              "Name": "migration-vpc-public-2"
            },
            "vpc_id": "vpc-00cefd5ac57397678"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793934355667:vpc/vpc-00cefd5ac57397678",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08297ece466fbbdb2",
            "default_route_table_id": "rtb-014e31b3082e189e8",
            "default_security_group_id": "sg-02b458eaa2edbc016",
            "dhcp_options_id": "dopt-0205452c0288adfd9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00cefd5ac57397678",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-014e31b3082e189e8",
            "owner_id": "793934355667",
            "tags": {
              "Name": "migration-vpc"
            },
            "tags_all": {
              "Name": "migration-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}